# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  13 Aug 2007; Andrew Gaffney <agaffney@gentoo.org> catalyst,
  modules/generic_stage_target.py, modules/netboot2_target.py:
  Fix typo in getopt call for --clear-autoresume. thanks to
  Tais M. Hansen <tais.hansen@osd.dk> in bug #188339 for catching this.
  Conditionally write CFLAGS to make.conf in stages for bug #177796.
  Copy overlay files in netboot2 target into proper dir for bug #174635.

  17 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/netboot2_target.py, targets/netboot2/netboot2-copyfile.sh,
  targets/support/netboot2-final.sh:
  Added a patch from Andrew Gaffney <agaffney@gentoo.org> on bug #174635 to
  fix a minor bug in System.map copying, add portage_overlay support, and adds
  the ability to use globbing in the package file lists for the netboot2
  target.

  17 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  +targets/netboot2/nb-busybox.cf:
  Added nb-busybox.cf to the netboot2 target for bug #174298.

  16 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  Make sure we install ccache/distcc into the build root, not necessarily ROOT.

  12 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh, targets/support/unmerge.sh:
  Change moving the VDB until after we have processed unmerge by moving it
  from livecdfs-update.sh to unmerge.sh, instead. This allows someone to
  unmerge packages from the gentoo-release-livecd target.

  12 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/kmerge.sh:
  Commented out the package.provided code in catalyst that seemed to cause
  problems with kerncache in testing. This is 2.0.4 and should be used for the
  2007.0 release.

  12 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/netboot2_target.py, targets/netboot2/netboot2-controller.sh,
  targets/netboot2/netboot2-copyfile.sh, targets/support/functions.sh,