@@ -9,7 +9,7 @@ from generic_stage_target import *
 class stage1_target(generic_stage_target):
 	def __init__(self,spec,addlargs):
 		self.required_values=[]
-		self.valid_values=[]
+		self.valid_values=["chost"]
 		generic_stage_target.__init__(self,spec,addlargs)
 	
 	def set_stage_path(self):
