@@ -1,6 +1,11 @@
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Id: $
 
+  22 Aug 2007; Andrew Gaffney <agaffney@gentoo.org>
+  modules/generic_stage_target.py, modules/stage1_target.py,
+  modules/stage2_target.py:
+  'chost' option is only valid in stage 1/2 specs. have catalyst error otherwise
+
   13 Aug 2007; Andrew Gaffney <agaffney@gentoo.org> catalyst,
   modules/generic_stage_target.py, modules/netboot2_target.py:
   Fix typo in getopt call for --clear-autoresume. thanks to
